--- a/1.inicio/style.css
+++ b/1.inicio/style.css
@@ -8,7 +8,6 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(255, 255, 255);
-    box-sizing: border-box;
 }
 
 .contenedor {
@@ -128,3 +127,113 @@ a {
     width: 100%;
     border-radius: 20px;
 }
+
+
+
+
+
+
+
+
+h1 {
+    text-align: center;
+    color: orange;
+}
+
+.crud-form {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    margin-bottom: 20px;
+    display: flex;
+    flex-wrap: wrap; /* Permite que los elementos se envuelvan en pantallas pequeñas */
+    gap: 30px; /* Espacio entre los elementos del formulario */
+    justify-content: center;
+}
+
+.crud-form input[type="text"],
+.crud-form select {
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    width: 200px; /* Ancho fijo para los inputs y select */
+    box-sizing: border-box; /* Incluye padding y border en el width */
+}
+
+.crud-form button {
+    padding: 10px 15px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+}
+.section-grud{
+    padding: 30px 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.crud-form button:hover {
+    background-color: #0056b3;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+table th, table td {
+    border: 1px solid #ddd;
+    padding: 12px;
+    text-align: left;
+    color: black;
+}
+
+table th {
+    background-color: #f2f2f2;
+    color: #333;
+    font-weight: bold;
+}
+
+table tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+table tr:hover {
+    background-color: #f1f1f1;
+}
+
+.acciones button {
+    padding: 8px 12px;
+    margin-right: 5px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+.acciones .edit-btn {
+    background-color: #ffc107;
+    color: white;
+}
+
+.acciones .edit-btn:hover {
+    background-color: #e0a800;
+}
+
+.acciones .delete-btn {
+    background-color: #dc3545;
+    color: white;
+}
+
+.acciones .delete-btn:hover {
+    background-color: #c82333;
+}
+
+/* Responsivo básico *
